--- a/retype.yml
+++ b/retype.yml
@@ -1,11 +1,17 @@
 input: .
 output: .retype
-url: # Add your website address here
+url: wiki.danbyte.net
 branding:
-  title: Project Name
-  label: Docs
+  logo: 
+  label: WIKI
 links:
-- text: Getting Started
-  link: https://retype.com/guides/getting-started/
+- text: Tilbage til DanByte
+  link: https://danbyte.net
 footer:
   copyright: "&copy; Copyright {{ year }}. All rights reserved."
+
+edit:
+  repo: "https://github.com/DenDanskeMine/Danbyte-Wiki"  # The URL to source files for this project
+  base: ""                    # Optional base path to a directory within repo
+  branch: "main"                  # Point to a custom branch within the repo
+  label: "Rediger side"     # A custom label for the generated link
